--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,13 +15,12 @@ services:
     restart: always
     environment:
     - K3S_TOKEN=${K3S_TOKEN:?err}
-    - K3S_KUBECONFIG_OUTPUT=/output/kubeconfig.yaml
+    - K3S_KUBECONFIG_OUTPUT=/output/config
     - K3S_KUBECONFIG_MODE=666
     volumes:
     - k3s-server:/var/lib/rancher/k3s
     - .:/output
     ports:
-    # - 6443:6443
     - 80:80
     - 443:443
     networks:
@@ -64,13 +63,14 @@ services:
       - k3s
 
   kubectl:
-    image: sysperu/kubectl:latest
+    # image: sysperu/kubectl:latest
+    image: kubectl:latest
     depends_on:
       - server
     environment:
       - K3S_URL=https://server:6443
-      - RANCHER_ADMIN_PASSWORD=${RANCHER_ADMIN_PASSWORD:admin}
-      - RANCHER_DOMAIN=${RANCHER_DOMAIN:rancher.local}
+      - RANCHER_ADMIN_PASSWORD=${RANCHER_ADMIN_PASSWORD:-admin}
+      - RANCHER_DOMAIN=${RANCHER_DOMAIN:-rancher.local}
     volumes:
       - .:/output
     networks:
