--- a/.github/workflows/build_and_push.yaml
+++ b/.github/workflows/build_and_push.yaml
@@ -13,6 +13,12 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4.1.1
+    
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3.0.0
@@ -21,9 +27,16 @@ jobs:
         password: ${{ secrets.DOCKER_TOKEN }}
           
 
-    - name: Build and Push Docker Kubectl Image
-      working-directory: ./
-      run: |
-        docker build -t kubectl .
-        docker tag kubectl sysperu/kubectl
-        docker push sysperu/kubectl
+    # - name: Build and Push Docker Kubectl Image
+    #   working-directory: ./
+    #   run: |
+    #     docker build -t kubectl .
+    #     docker tag kubectl sysperu/kubectl
+    #     docker push sysperu/kubectl
+    - name: Build and push
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        platforms: linux/amd64,linux/arm64
+        push: true
+        tags: sysperu/kubectl:latest
