--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ services:
       - k3s_net
 
   kubectl:
-    image: sysperu/kubectl:latest
+    image: sysperu/kubectl:main
     container_name: rancherui-init
     depends_on:
       - server
